--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "package_name": "com.elite.qel_medistore",
-    "app_name": "Qel",
+    "package_name": "com.elite.wallet",
+    "app_name": "Wallet",
     "version_code": 1,
     "version_name": "1",
     "min_sdk": 21,
