--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.elite.wallet.provider"
+            android:authorities="com.elite.ashshakurcharity.provider"
             android:grantUriPermissions="true"
             android:exported="false">
             <meta-data
