--- a/config.json
+++ b/config.json
@@ -6,6 +6,6 @@
     "min_sdk": 21,
     "compile_sdk": 33,
     "color_black": "#333333",
-    "color_dark_gray": "#333333",
-    "color_white": "#333333"
+    "color":"#ffffff",
+    "IdNumber":"8e66d79d-84b7-4ba0-9d60-0e74189675c45"
 }
