--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: Build Android APK & AAB
+name: Android Build (Debug)
 
 on:
   push:
     branches:
-      - main  # change if your main branch has a different name
-  workflow_dispatch:  # manual trigger
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Java (JDK 17)
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -24,19 +24,24 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build APK
-        run: ./gradlew assembleRelease
+        run: ./gradlew assembleDebug
 
       - name: Build AAB
-        run: ./gradlew bundleRelease
+        run: ./gradlew bundleDebug
+
+      - name: List output folders
+        run: |
+          ls -R app/build/outputs/apk/debug/
+          ls -R app/build/outputs/bundle/debug/
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-release-apk
-          path: app/build/outputs/apk/release/*.apk
+          name: app-debug-apk
+          path: app/build/outputs/apk/debug/*.apk
 
       - name: Upload AAB
         uses: actions/upload-artifact@v4
         with:
-          name: app-release-aab
-          path: app/build/outputs/bundle/release/*.aab
+          name: app-debug-aab
+          path: app/build/outputs/bundle/debug/*.aab
