--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-org.gradle.java.home=E:\\Tools\\jdk-17.0.12
+#org.gradle.java.home=E:\\Tools\\jdk-17.0.12
 android.useAndroidX=true
 android.enableJetifier=true
