--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,35 +12,36 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Make Gradle executable
-        run: chmod +x ./gradlew
+      - name: Make Gradle Wrapper executable
+        run: chmod +x gradlew
 
-      - name: Build APK
-        run: ./gradlew assembleDebug
+      - name: Build APK (Debug)
+        run: ./gradlew :app:assembleDebug
 
-      - name: Build AAB
-        run: ./gradlew bundleDebug
+      - name: Build AAB (Debug)
+        run: ./gradlew :app:bundleDebug
 
-      - name: List output folders
-        run: |
-          ls -R app/build/outputs/apk/debug/
-          ls -R app/build/outputs/bundle/debug/
+      - name: List APK output
+        run: find app/build/outputs/apk/debug -name "*.apk"
 
-      - name: Upload APK
+      - name: List AAB output
+        run: find app/build/outputs/bundle/debug -name "*.aab"
+
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
           path: app/build/outputs/apk/debug/*.apk
 
-      - name: Upload AAB
+      - name: Upload AAB artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-aab
