--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "package_name": "com.elite.homecare",
-    "app_name": "Home Care",
+    "package_name": "com.elite.qel_medistore",
+    "app_name": "Qel",
     "version_code": 1,
     "version_name": "1",
     "min_sdk": 21,
     "compile_sdk": 33,
     "color_black": "#333333",
     "color":"#ffffff",
-    "IdNumber":"dlqhjsforruglbalrdhiqlchmlooiqxb",
-    "app_icon":"https://drive.google.com/uc?export=download&id=10rAixWuiRl_9Lwg5jxoSvlbFeOOag6th",
-    "splash_screen":"https://drive.google.com/uc?export=download&id=1qhrVfyPfrTdmM1HUDfXmGI7Kp2bQfhFn"
+    "IdNumber":"17ea81ea-b4fa-4b7a-8f3e-10ef438b880f",
+    "app_icon":"https://drive.google.com/uc?export=download&id=1eaSvvb13P3WKKRcVPDetR6-7CNmV277-",
+    "splash_screen":"https://drive.google.com/uc?export=download&id=1SpDbTFDSAQneVeSZzIlHLHXSjGhXK7hk"
 }
