--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ import java.nio.file.StandardCopyOption
 
 apply plugin: 'com.android.application'
 
-// Load config.json
 def jsonFile = file("${rootDir}/config.json")
 if (!jsonFile.exists()) {
     throw new GradleException("config.json not found at ${jsonFile.absolutePath}")
@@ -19,7 +18,6 @@ def sdkMin = json.min_sdk ?: 21
 def sdkUpdate = json.compile_sdk ?: 33
 def colorBlack = json.color_black ?: "#000000"
 
-// Load keystore credentials from signing.properties
 def keystorePropsFile = rootProject.file("signing.properties")
 def keystoreProps = new Properties()
 if (keystorePropsFile.exists()) {
@@ -55,6 +53,18 @@ android {
             signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    bundle {
+        language {
+            enableSplit = false
+        }
+        density {
+            enableSplit = false
+        }
+        abi {
+            enableSplit = false
         }
     }
 }
@@ -93,7 +103,6 @@ task moveAssets {
         filesToMove.each { fileName ->
             def sourceFile = new File(rootDirPath, fileName)
             def destinationFile = new File(drawablePath, fileName)
-
             if (sourceFile.exists()) {
                 Files.move(sourceFile.toPath(), destinationFile.toPath(), StandardCopyOption.REPLACE_EXISTING)
                 println "Moved ${fileName} to drawable folder"
@@ -174,6 +183,16 @@ task updateConfig {
             cssContent = cssContent.replaceAll(/background:\s*#[0-9a-fA-F]{6}/, "background: ${colorBlack}")
             cssFile.text = cssContent
         }
+    }
+}
+
+task copyAabToRoot(type: Copy) {
+    dependsOn bundleRelease
+    from("$buildDir/outputs/bundle/release/")
+    include("*.aab")
+    into("$rootDir/output")
+    doLast {
+        println "✅ AAB copied to ${rootDir}/output"
     }
 }
 
