--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,36 +11,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: ☕ Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Make Gradle Wrapper executable
+      - name: 🔧 Make Gradle Wrapper executable
         run: chmod +x gradlew
 
-      - name: Decode PFX Keystore
+      - name: 🔐 Decode PFX Keystore to project root
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > keystore.pfx
 
-      - name: Create signing.properties for .pfx
+      - name: 📝 Create signing.properties in project root
         run: |
           echo "storeFile=keystore.pfx" > signing.properties
           echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> signing.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> signing.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> signing.properties
 
-      - name: Build Signed AAB (Release)
+      - name: 🏗️ Build Signed AAB (Release)
         run: ./gradlew :app:bundleRelease
 
-      - name: List AAB Output
+      - name: 📁 List AAB Output
         run: find app/build/outputs/bundle/release -name "*.aab"
 
-      - name: Upload Signed AAB Artifact
+      - name: 📤 Upload Signed AAB Artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release-aab
