--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Android Build (Release)
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -10,36 +11,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: ☕ Set up JDK 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: 🔧 Make Gradle Wrapper executable
+      - name: Make Gradle Wrapper executable
         run: chmod +x gradlew
 
-      - name: 🔐 Decode advance_native.pfx keystore to project root
+      - name: Decode advance_native.pfx keystore to app folder
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > advance_native.pfx
+          mkdir -p app
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > app/advance_native.pfx
 
-      - name: 📝 Create signing.properties in project root
+      - name: Create signing.properties with correct keystore path
         run: |
-          echo "storeFile=advance_native.pfx" > signing.properties
+          echo "storeFile=app/advance_native.pfx" > signing.properties
           echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> signing.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> signing.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> signing.properties
 
-      - name: 🏗️ Build Signed AAB (Release)
+      - name: Build Signed AAB (Release)
         run: ./gradlew :app:bundleRelease
 
-      - name: 📁 List AAB Output
+      - name: List AAB Output
         run: find app/build/outputs/bundle/release -name "*.aab"
 
-      - name: 📤 Upload Signed AAB Artifact
+      - name: Upload Signed AAB Artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release-aab
